doc/paper/tst/jalangi_test/RESULTS_V2/RWX/timeResultsLyaNOWITH.txt
The name of file 3d-cube.js

real	16m8.035s
user	16m21.096s
sys	0m6.472s
The name of file 3d-morph.js

real	1m24.539s
user	1m24.508s
sys	0m0.112s
The name of file 3d-raytrace.js

real	0m4.702s
user	0m4.824s
sys	0m0.072s
The name of file access-binary-trees.js

real	0m0.790s
user	0m0.784s
sys	0m0.024s
The name of file access-fannkuch.js

real	0m0.568s
user	0m0.552s
sys	0m0.016s
The name of file access-nbody.js

real	0m39.433s
user	0m39.500s
sys	0m0.036s
The name of file access-nsieve.js

real	0m0.344s
user	0m0.296s
sys	0m0.056s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.218s
user	0m0.212s
sys	0m0.004s
The name of file bitops-bits-in-byte.js

real	0m0.436s
user	0m0.432s
sys	0m0.004s
The name of file bitops-bitwise-and.js

real	0m0.238s
user	0m0.236s
sys	0m0.000s
The name of file bitops-nsieve-bits.js

real	0m0.339s
user	0m0.336s
sys	0m0.000s
The name of file controlflow-recursive.js

real	0m0.379s
user	0m0.372s
sys	0m0.012s
The name of file crypto-aes.js

real	0m10.949s
user	0m10.988s
sys	0m0.092s
The name of file crypto-md5.js

real	0m0.340s
user	0m0.352s
sys	0m0.016s
The name of file crypto-sha1.js

real	0m0.333s
user	0m0.320s
sys	0m0.012s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/gntousakis/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:153:32)
    at Date.formatDate (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:363:26)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:378:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)

real	0m0.074s
user	0m0.068s
sys	0m0.004s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:106:22)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:497:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)

real	0m0.075s
user	0m0.072s
sys	0m0.000s
The name of file math-cordic.js

real	0m0.466s
user	0m0.476s
sys	0m0.008s
The name of file math-partial-sums.js

real	1m40.239s
user	1m40.452s
sys	0m0.112s
The name of file math-spectral-norm.js

real	0m0.420s
user	0m0.420s
sys	0m0.008s
The name of file regexp-dna.js

real	0m0.814s
user	0m0.808s
sys	0m0.008s
The name of file string-base64.js

real	0m33.722s
user	0m33.732s
sys	0m0.056s
The name of file string-fasta.js

real	0m1.203s
user	0m1.192s
sys	0m0.032s
The name of file string-tagcloud.js

real	0m26.200s
user	0m26.304s
sys	0m0.132s
The name of file string-unpack-code.js

real	0m9.731s
user	0m9.744s
sys	0m0.028s
The name of file string-validate-input.js

real	0m0.153s
user	0m0.164s
sys	0m0.012s
